# lan-server-rs

./: Cargo.toml  flake.nix
hitori-webapp/: astro.config.mjs  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tests.http  tsconfig.json
hitori-webapp/public/: DB.json
hitori-webapp/src/: utils.ts
hitori-webapp/src/auto-import/: htmlExtensions.ts
hitori-webapp/src/components/: IndexElement.ts  index.ts
hitori-webapp/src/components/channel-list/: Channel.astro  ChannelElement.ts  ChannelList.astro  ChannelListElement.ts
hitori-webapp/src/components/message-list/: Message.astro  MessageElement.ts  MessageInput.astro  MessageInputElement.ts  MessageList.astro  MessageListElement.ts
hitori-webapp/src/components/message-list/message-types/: LocationMessage.astro
hitori-webapp/src/pages/: index.astro
server/: Cargo.toml
server/src/: channel.rs  main.rs  message.rs
src/: main.rs
src/html/: index.html
