cargo-features = ["codegen-backend"]
[package]
name = "hitori-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros"] }
chrono = { version = "0.4.37", features = ["serde"] }
futures = "0.3.30"
local-ip-address = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }

[profile.dev]
debug = "full"
codegen-backend = "cranelift"
